some major adaptations
